other-vpol/protect-node-taints/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: protect-node-taints
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../protect-node-taints.yaml
    - assert:
        file: policy-ready.yaml
